2004-10-15  Paolo Borelli  <pborelli@katamail.com>

	* taglist/gedit-taglist-plugin-window.c: use gtktextview api.

2004-10-12  Paolo Borelli  <pborelli@katamail.com>

	* sort/sort.c: use gtktextview api.

2004-10-05  Paolo Borelli  <pborelli@katamail.com>

	* docinfo/docinfo.c: update for gedit-document changes.
	* sort/sort.c: update for gedit-document changes.
	* spell/spell.c: update for gedit-document changes.

2004-09-15  Vinay M R  <vinay.mandyakoppal@wipro.com>

	* time/time.c: Help invocation for "Insert date and time" is
	implemented. Fixes bug #152686. 

2004-09-14  Vinay M R  <vinay.mandyakoppal@wipro.com>

	* sort/sort.c: Pass correct section-id for displaying help.
	Fixes bug #152586.

2004-08-30  Paolo Borelli  <pborelli@katamail.com>

	* spell/gedit-automatic-spell-checker.c: fix suggestions list
	in popup menu when using the Shift+F10 shortcut (#149475).

2004-08-30  Paolo Borelli  <pborelli@katamail.com>

	* spell/gedit-spell-checker-dialog.c:
	* spell/gedit-spell-language-dialog.c: handle double clicks
	on list items (bugs #149400 and #149761).

2004-08-16  Paolo Borelli  <pborelli@katamail.com>

	* spell/gedit-spell-checker.c: patch from J.H.M. Dassen that
	adds some new languages (bug #149983).

2004-08-07  Paolo Borelli  <pborelli@katamail.com>

	* shell_output/shell_output.c: fix typo, s/occured/occurred.

2004-07-19  Paolo Maggi  <paolo.maggi@polito.it>

	* changecase/.cvsignore: added

2004-04-05  Paolo Borelli  <pborelli@katamail.com>

	* all plugins: use the same style in plugins descriptions.
	* all plugins: do not distribute generated desktop file.

2004-04-05  Paolo Borelli  <pborelli@katamail.com>

	* changecase/* : add a change case plugin.

2004-03-27  Paolo Borelli  <pborelli@katamail.com>

	* indent/indent.c (indent_cb): do not indent empty lines.

2004-03-27  Paolo Maggi  <paolo.maggi@polito.it>

	* taglist/gedit-taglist-plugin-window.c (taglist_window_show):
	sets the window type to UTILITY (patch by Rob Adams