@@ -1,3 +1,7 @@
+2004-10-17  Paolo Borelli  <pborelli@katamail.com>
+
+	* shell_output/shell_output.c: use proper help section.
+
 2004-10-15  Paolo Borelli  <pborelli@katamail.com>
 
 	* taglist/gedit-taglist-plugin-window.c: use gtktextview api.
